# aitrading

./: .gitignore  .python-version  Dockerfile  Dockerfile2  Makefile  Readme.md  nozha.ipynb  pyproject.toml  requirements.txt  requirements_old.txt  setup.py
aitrading/: params.py  utils.py
aitrading/api/: fast.py  main.py  main2.py
aitrading/api/templates/: index.html  ws_index.html
aitrading/data/: FX_EURUSD_unseen.csv
aitrading/frontend/: index.html
aitrading/interface/: main.py  workflow.py
aitrading/ml_logic/: ModelTrainer.py  data.py  encoders.py  model.py  preprocessor.py  registry.py
aitrading/ml_logic2/: data_engineering.py  feature_engineering.py  features_preprocessing.py  model_engineering.py  repository.py  utility.py
aitrading/notebooks/: Behnaz_notebook2.ipynb  Behnaz_notebook5.ipynb  anthony_notebook1.ipynb  behnaz_notbook4.ipynb  behnaz_notebook.ipynb  eurusd_unseen_data.csv  kassraniroumand_notebok2.ipynb  kassraniroumand_notebook.ipynb  kassraniroumand_notebook3.ipynb  kassraniroumand_notebook4.ipynb  kassraniroumand_notebook5.ipynb  kassraniroumand_notebook6.ipynb  kassraniroumand_notebook7.ipynb  kassraniroumand_notebook8.ipynb  model1.h5  nozha_notbook4.ipynb  nozha_notebook.ipynb  nozha_notebook2.ipynb  nozha_notebook_dart.ipynb  nozha_notebook_data.ipynb  nozha_notebook_data_unseen.ipynb
aitrading/training_outputs/models/: model2.keras
